[package]
name = "keisen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Floating palette for typing box-drawing (keisen) characters on Windows"
repository = "https://github.com/sin5ddd/keisen"
readme = "README.md"

[dependencies]
# default_fonts を外し、埋め込みフォント（OFL/UFL）を同梱しない。
# UI は Windows システムフォントのみを実行時ロードする。
eframe = { version = "0.33.3", default-features = false, features = ["glow"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse", "Win32_Foundation", "Win32_System_Threading"] }

[build-dependencies]
winresource = "0.1.31"
